conditional image rendering

--- a/ecommerce_api/products/templates/products/product_detail.html
+++ b/ecommerce_api/products/templates/products/product_detail.html
@@ -11,5 +11,7 @@
     <p>Quantity in Stock: {{ product.quantity_in_stock }}</p>
     {% if product.image %}
         <img src="{{ product.image.url }}" alt="{{ product.name }} Image">
+    {% else %}
+        <p>Image unavailable</p>
     {% endif %}
 {% endblock %}
