--- a/ecommerce_api/products/templates/products/product_list.html
+++ b/ecommerce_api/products/templates/products/product_list.html
@@ -8,7 +8,7 @@
     <h2>All Products</h2>
     <ul>
         {% for product in products %}
-            <li><a href={{ product.id }}>{{ product.name }} - ${{ product.price }}</a></li>
+            <li><a href="{{ product.id }}/">{{ product.name }} - ${{ product.price }}</a></li>
         {% endfor %}
     </ul>
 {% endblock %}
