--- a/ecommerce_api/products/templates/products/product_detail.html
+++ b/ecommerce_api/products/templates/products/product_detail.html
@@ -5,13 +5,26 @@
 {% block header %}Product Detail{% endblock %}
 
 {% block content %}
-    <h2>{{ product.name }}</h2>
-    <p>Price: ${{ product.price }}</p>
-    <p>Description: {{ product.description }}</p>
-    <p>Quantity in Stock: {{ product.quantity_in_stock }}</p>
-    {% if product.image %}
-        <img src="{{ product.image.url }}" alt="{{ product.name }} Image"/>
-    {% else %}
-        <p>Image unavailable</p>
-    {% endif %}
+    <div class="container mt-4">
+        <h2>{{ product.name }}</h2>
+        <div class="row">
+            <div class="col-md-6">
+                {% if product.image %}
+                    <img src="{{ product.image.url }}" alt="{{ product.name }} Image" class="img-fluid">
+                {% else %}
+                    <p class="text-muted">Image unavailable</p>
+                {% endif %}
+            </div>
+            <div class="col-md-6">
+                <p class="lead">Price: ${{ product.price }}</p>
+                <p>{{ product.description }}</p>
+                <p>Quantity in Stock: {{ product.quantity_in_stock }}</p>
+                <div class="btn-group mt-3" role="group">
+                    <a href="{% url 'product_update' pk=product.pk %}" class="btn btn-primary">Edit</a>
+                    <span style="margin-right: 5px;"></span>
+                    <a href="{% url 'product_delete' pk=product.pk %}" class="btn btn-danger">Delete</a>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
