--- a/ecommerce_api/products/templates/products/product_list.html
+++ b/ecommerce_api/products/templates/products/product_list.html
@@ -5,10 +5,17 @@
 {% block header %}Product List{% endblock %}
 
 {% block content %}
-    <h2>All Products</h2>
-    <ul>
-        {% for product in products %}
-            <li><a href="{{ product.id }}/">{{ product.name }} - ${{ product.price }}</a></li>
-        {% endfor %}
-    </ul>
+    <div class="container mt-4">
+        <h2>All Products</h2>
+        <ul class="list-group">
+            {% for product in products %}
+                <li class="list-group-item">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <a href="{{ product.id }}/">{{ product.name }}</a>
+                        <span class="badge badge-primary badge-pill">${{ product.price }}</span>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
